Correcciones al backend e implementación inicial del frontend, falta flujo de contenido para completar alcance del MVP
